# jamPlatform

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.cpp  platform.h
src/jamPlatforms/: platform_linux.cpp
src/jamPlatforms/wayland/: wayland_client.cpp  wayland_client.h
